# FastApi-

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0b4bdf9b0c34_add_events_table.py  530112c3fd2c_add_is_admin.py  542867686f77_add_events_table.py  55666565063b_add_is_admin.py  66519ee5f312_add_user_event.py  67bbe5352e6e_added_user_table.py  96ccd029b9e8_add_user_event.py  ac390b00a910_add_user_event3.py  dbb3afe4c92b_add_events_table.py
app/database/: base.py  connector.py
app/handlers/: auth.py  events.py
app/schemas/: auth.py
app/services/: auth.py  models.py
